objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Assigned_wave_1__c</fullName>
        <label>Assigned wave 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1) 27 June</fullName>
                </value>
                <value>
                    <fullName>2) 4 July</fullName>
                </value>
                <value>
                    <fullName>3) 11 July</fullName>
                </value>
                <value>
                    <fullName>4) 18 July</fullName>
                </value>
                <value>
                    <fullName>5) 25 July</fullName>
                </value>
                <value>
                    <fullName>6) 1 August</fullName>
                </value>
                <value>
                    <fullName>7) 8 August</fullName>
                </value>
                <value>
                    <fullName>8) 15 August</fullName>
                </value>
                <value>
                    <fullName>9) 9 July</fullName>
                </value>
                <value>
                    <fullName>10) 6 August</fullName>
                </value>
                <value>
                    <fullName>Saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_wave_2__c</fullName>
        <label>Assigned wave 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1) 27 June</fullName>
                </value>
                <value>
                    <fullName>2) 4 July</fullName>
                </value>
                <value>
                    <fullName>3) 11 July</fullName>
                </value>
                <value>
                    <fullName>4) 18 July</fullName>
                </value>
                <value>
                    <fullName>5) 25 July</fullName>
                </value>
                <value>
                    <fullName>6) 1 August</fullName>
                </value>
                <value>
                    <fullName>7) 8 August</fullName>
                </value>
                <value>
                    <fullName>8) 15 August</fullName>
                </value>
                <value>
                    <fullName>9) 9 July</fullName>
                </value>
                <value>
                    <fullName>10) 6 August</fullName>
                </value>
                <value>
                    <fullName>Saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_1_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if completed; leave unchecked if not</inlineHelpText>
        <label>Assignment 1 completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_2_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if completed; leave unchecked if not</inlineHelpText>
        <label>Assignment 2 completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_3_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment 3 completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asthmatic__c</fullName>
        <label>Asthmatic?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes, and uses an inhaler</fullName>
                </value>
                <value>
                    <fullName>Yes, but does not use an inhaler</fullName>
                </value>
                <value>
                    <fullName>Yes, inhaler use unknown</fullName>
                </value>
                <value>
                    <fullName>Yes, and uses steroid tablets</fullName>
                </value>
                <value>
                    <fullName>Yes, other information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attending_2011_Graduation__c</fullName>
        <label>Attending 2011 Graduation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, will be attending graduation</fullName>
                </value>
                <value>
                    <fullName>No, will not be attending graduation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autistic_or_has_Asperger_s_Syndrome__c</fullName>
        <label>Autistic or has Asperger&apos;s Syndrome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - autistic</fullName>
                </value>
                <value>
                    <fullName>Yes - Asperger&apos;s Syndrome</fullName>
                </value>
                <value>
                    <fullName>Yes - more info needed</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B1_Project_coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B1 Project coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B1_Team_leader_Senior_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B1_Team_leader_Senior_mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B1_Team_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B1 Team mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box checked if YP has selected this wave</inlineHelpText>
        <label>B1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2_Project_coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2 Project coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2_Team_leader_Senior_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2_Team_leader_Senior_mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2_Team_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2_Team_mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B3_Project_coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B3 Project coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B3_Team_leader_Senior_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B3 Team leader Senior mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B3_Team_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B3 Team mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box checked if YP has selected this wave</inlineHelpText>
        <label>B3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_ProjectVol_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B ProjectVol Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_ProjectVol_Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B ProjectVol Sun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_account_name__c</fullName>
        <label>Bank account name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <label>Bank account number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broken_bones_muscle_tears_tendon_damage__c</fullName>
        <label>Broken bones/muscle tears/tendon damage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Not answered]</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - broken bones</fullName>
                </value>
                <value>
                    <fullName>Yes - muscle tears</fullName>
                </value>
                <value>
                    <fullName>Yes - tendon/ligament damage</fullName>
                </value>
                <value>
                    <fullName>Yes - pulled/strained muscle</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bronchitis_TB_other_lung_condition__c</fullName>
        <label>Bronchitis/TB/other lung condition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - bronchitis</fullName>
                </value>
                <value>
                    <fullName>Yes - TB</fullName>
                </value>
                <value>
                    <fullName>Yes - other lung condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRB_application_number__c</fullName>
        <description>Participant&apos;s 2010 application number</description>
        <label>CRB application number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRB_cleared_date__c</fullName>
        <label>CRB cleared date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRB_expiry__c</fullName>
        <label>CRB expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRB_number__c</fullName>
        <description>Participants CRB number for this year</description>
        <label>CRB number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRB_submission_date__c</fullName>
        <label>CRB submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CV_received__c</fullName>
        <label>CV received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CV_requested__c</fullName>
        <label>CV requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_in_local_envelope__c</fullName>
        <inlineHelpText>Date cash was placed in local envelope for preparation for banking</inlineHelpText>
        <label>Cash in local envelope</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Challenge_behaviour_update__c</fullName>
        <description>Behaviour issues that occur during The Challenge</description>
        <label>Challenge behaviour update</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Challenge_health_update__c</fullName>
        <description>Medical issues that occur during The Challenge</description>
        <label>Challenge health update</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coming_to_training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box checked if they are coming to training</inlineHelpText>
        <label>Coming to training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Assignment__c</fullName>
        <description>Did the staff applicant  complete their assignment?</description>
        <label>Completed Assignment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_assessment_date__c</fullName>
        <label>Confirmed assessment date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>27th July 2011</fullName>
                </value>
                <value>
                    <fullName>28th July 2011</fullName>
                </value>
                <value>
                    <fullName>1st August 2011</fullName>
                </value>
                <value>
                    <fullName>9th August 2011</fullName>
                </value>
                <value>
                    <fullName>10th August 2011</fullName>
                </value>
                <value>
                    <fullName>16th August 2011</fullName>
                </value>
                <value>
                    <fullName>17th August 2011</fullName>
                </value>
                <value>
                    <fullName>22nd August 2011</fullName>
                </value>
                <value>
                    <fullName>23rd August 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_training_date__c</fullName>
        <label>Confirmed training date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday 21st August, 2pm-6pm</fullName>
                </value>
                <value>
                    <fullName>Sunday 28th August, 2pm-6pm</fullName>
                </value>
                <value>
                    <fullName>Wednesday 7th September</fullName>
                </value>
                <value>
                    <fullName>Thursday 8th September, 5pm-9pm</fullName>
                </value>
                <value>
                    <fullName>Friday 9th September, 9.45am-5pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_training_location__c</fullName>
        <label>Confirmed training location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lambeth Mission, 3-5 Lambeth Road, London, SE1 7DQ</fullName>
                </value>
                <value>
                    <fullName>75 Westminster Bridge Road, London, SE1 7HS</fullName>
                </value>
                <value>
                    <fullName>100 Ringcross Centre, 60 Lough Road, London, N7 8RH</fullName>
                </value>
                <value>
                    <fullName>The Custard Factory, Gibb Square, Birmingham, B9 4AA</fullName>
                </value>
                <value>
                    <fullName>The Gap Community Centre, 39 Oakwood Grove, Warwick, CV34 5TD</fullName>
                </value>
                <value>
                    <fullName>Atria, 75 Spa Road, Bolton, BL1 4AG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_name_if_diff_to_PG__c</fullName>
        <inlineHelpText>Enter the name of consent signatory, if it different to the PG&apos;s name</inlineHelpText>
        <label>Consent name, if different to PG</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_signature__c</fullName>
        <label>Consent signature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_to_CRB_disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if consent to CRB check and undertake to provide details of any criminal convictions; leave unchecked if not</inlineHelpText>
        <label>Consent to CRB  disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_data_protection_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to data protection policy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_expenses_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to expenses policy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_volunteer_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to volunteer agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continued_part_time_commitment__c</fullName>
        <description>Staff applicant&apos;s willingness to commit time to provide two hours a week for four hours after the summer to mentor a group</description>
        <label>Continued part-time commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Role__c</fullName>
        <label>Core Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criminal_record__c</fullName>
        <label>Criminal record</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_records_check__c</fullName>
        <description>Whether the staff applicant is prepared to provide a criminal records disclosure</description>
        <label>Consent to criminal records check?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I agree</fullName>
                </value>
                <value>
                    <fullName>I do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_ORC_and_acceptance_letter__c</fullName>
        <label>Date ORC and acceptance letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Oyster_buspass_holder_given__c</fullName>
        <inlineHelpText>Date Oyster/bus pass holder was given out</inlineHelpText>
        <label>Date Oyster/buspass holder given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_P2_re_sent__c</fullName>
        <inlineHelpText>Date the P2 form was re-sent to the PG (either by post or email)</inlineHelpText>
        <label>Date P2 re-sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PV_completed_agreement__c</fullName>
        <inlineHelpText>Date applicant completed PV survey</inlineHelpText>
        <label>Date PV completed agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Part_1_entered__c</fullName>
        <label>Date Part 1 entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Part_2_entered__c</fullName>
        <inlineHelpText>Date Part 2 information is entered into Salesforce</inlineHelpText>
        <label>Date Part 2 entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Part_2_received__c</fullName>
        <inlineHelpText>Date Part 2 form is received (not necessarily the same as the date it is entered into Salesforce)</inlineHelpText>
        <label>Date Part 2 received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Part_2_sent_by_post__c</fullName>
        <inlineHelpText>Date Part 2 communication and form was sent</inlineHelpText>
        <label>Date Part 2 sent by post?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_availability_requested__c</fullName>
        <label>Date assessment availability requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_availability_info_provided__c</fullName>
        <label>Date availability info provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_consent_was_given__c</fullName>
        <label>Date consent was given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_driving_license_was_gained__c</fullName>
        <description>Date driving license was gained.  Would be empty if the person has no driving license.</description>
        <label>Date driving license was gained?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_left_Challenge__c</fullName>
        <inlineHelpText>Date the YP left The Challenge</inlineHelpText>
        <label>Date left Challenge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_application_decision__c</fullName>
        <inlineHelpText>Date of application decision</inlineHelpText>
        <label>Date of application decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_offer_sent__c</fullName>
        <inlineHelpText>Date offer of a place was sent</inlineHelpText>
        <label>Date offer sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_post_allocation_email_sent__c</fullName>
        <label>Date post-allocation email sent</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_programme_details_re_sent__c</fullName>
        <inlineHelpText>Date programme details have been re-sent</inlineHelpText>
        <label>Date programme details re-sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_they_say_they_will_post_P2_back__c</fullName>
        <label>Date they say they will post P2 back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_training_attend_confirm_requested__c</fullName>
        <label>Date training attend confirm requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_withdrawn__c</fullName>
        <inlineHelpText>Date the YP was withdrawn by their PG</inlineHelpText>
        <label>Date withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decline_reason_other__c</fullName>
        <inlineHelpText>Summarise reason for rejection if other</inlineHelpText>
        <label>Decline reason other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_diabetes__c</fullName>
        <label>Details diabetes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_for_autism_Asperger_s__c</fullName>
        <label>Details for autism/Asperger&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_ADHD_hyperactivity__c</fullName>
        <label>Details of ADHD &amp; hyperactivity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Asthma__c</fullName>
        <label>Details of Asthma</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_allergic_reactions__c</fullName>
        <label>Details of allergic reactions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_anti_social_violent_behavior__c</fullName>
        <label>Details of anti social/violent behavior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_behavioural_psych_difficulty__c</fullName>
        <label>Details of behavioural/psych difficulty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_bladder_urinary_problems__c</fullName>
        <label>Details of bladder/urinary problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_blood_disorders__c</fullName>
        <label>Details of blood disorders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_broken_bones__c</fullName>
        <label>Details of broken bones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_criminal_record__c</fullName>
        <label>Details of criminal record</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_dietary_req__c</fullName>
        <label>Details of dietary req</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_difficulty_adhering__c</fullName>
        <label>Details of difficulty adhering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_epilepsy__c</fullName>
        <label>Details of epilepsy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_food_allergies__c</fullName>
        <label>Details of food allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_hearing_visual_impairment__c</fullName>
        <label>Details of hearing/visual impairment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_heart_trouble__c</fullName>
        <label>Details of heart trouble</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_hospitalization__c</fullName>
        <label>Details of hospitalization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_in_care_condition__c</fullName>
        <label>Details of in care condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_infectious_diseases__c</fullName>
        <label>Details of infectious diseases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_injections__c</fullName>
        <label>Details of injections</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_learning_difficulty__c</fullName>
        <label>Details of learning difficulty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_lung_condition__c</fullName>
        <label>Details of lung condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_medication__c</fullName>
        <label>Details of medication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_migranes_head_injury__c</fullName>
        <label>Details of migranes/head injury</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_mobility_restrictions__c</fullName>
        <label>Details of mobility restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_other_diagnosed_condition__c</fullName>
        <label>Details of other diagnosed condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_pregnancy__c</fullName>
        <label>Details of pregnancy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_reason_left_Challenge__c</fullName>
        <inlineHelpText>Details of the reason why the YP left The Challenge</inlineHelpText>
        <label>Details of reason left Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_stomach_digestive_problems__c</fullName>
        <label>Details of stomach/digestive problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_substance_abuse__c</fullName>
        <label>Details of substance abuse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diabetes_If_yes_which_type__c</fullName>
        <label>Diabetes? If yes, which type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - type 1</fullName>
                </value>
                <value>
                    <fullName>Yes - type 2</fullName>
                </value>
                <value>
                    <fullName>Yes - other type</fullName>
                </value>
                <value>
                    <fullName>Yes - type unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_not_attend_request_new_availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not attend, request new availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_they_do_the_Year_Challenge__c</fullName>
        <description>Tells us whether the person helped deliver the Year Challenge or not</description>
        <label>Did they do the Year Challenge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_or_accessibility_requirements__c</fullName>
        <description>Staff applicant&apos;s special dietary or accessibility requirements, if any</description>
        <label>Dietary or accessibility requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difficulty_adhering_to_rules_boundaries__c</fullName>
        <label>Difficulty adhering to rules/boundaries?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_deadline__c</fullName>
        <formula>School__r.Discount_deadline_2012__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_valid_driving_license__c</fullName>
        <label>Do you have a valid driving license</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DofE_Notes__c</fullName>
        <label>DofE Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Doing_Gold_DofE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doing Gold DofE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_alternate__c</fullName>
        <description>Alternative email address</description>
        <inlineHelpText>Alternative email address</inlineHelpText>
        <label>Email alternate</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emotional_behavioural_psych_difficulty__c</fullName>
        <label>Emotional/behavioural/psych difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
</CustomObject>